--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@types/node": "^20.17.46",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
 }
